--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,8 +18,8 @@ jobs:
       uses: docker/login-action@v2.1.0
       with:
        registry: registry-1.docker.io
-       username: ${{secrets.DOCKERHUBUSERNAME}}
-       password: ${{secrets.DOCKERHUBPASSWORD}}
+       username: ${{vars.DOCKERHUBUSERNAME}}
+       password: ${{vars.DOCKERHUBPASSWORD}}
   LogintodockerhubTest:
     runs-on: ubuntu-latest
     environment: Test
@@ -29,5 +29,5 @@ jobs:
       uses: docker/login-action@v2.1.0
       with:
        registry: registry-1.docker.io
-       username: ${{secrets.DOCKERHUBUSERNAME}}
-       password: ${{secrets.DOCKERHUBPASSWORD}}
+       username: ${{vars.DOCKERHUBUSERNAME}}
+       password: ${{vars.DOCKERHUBPASSWORD}}
